configuration/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tetragon-prometheus-scrape
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tetragon
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 2112
